[Fix]_19/StatisticsJava17Compatibility